[tool.poetry]
name = "astro-wiki-builder"
version = "1.1.0"
description = "Outil Python pour collecter, consolider et transformer des données astronomiques en projets d'articles Wikipédia"
authors = ["Machi Chiotte <machichiotte@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["astronomy", "wikipedia", "exoplanet", "data-collection", "article-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
requests = "^2.32.3"
pandas = "^2.2.3"
astroquery = "^0.4.10"
sqlalchemy = "^2.0.41"
python-dotenv = "^1.1.0"
numpy = "^2.2.6"
beautifulsoup4 = "^4.13.4"
html5lib = "^1.1"
PyYAML = "^6.0.2"
pytz = "^2025.2"
wikipedia = "^1.4.0"
pyvo = "^1.6.2"
astropy = "^7.1.1"
streamlit = "^1.40.0"
plotly = "^5.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.15.1"
ruff = "^0.12.0"
mypy = "^1.16.1"
# Vos nouveaux outils
bandit = "^1.7.8"
radon = "^6.0.1"
cloc = "^0.0.1" # Note: cloc est souvent installé via OS (apt/brew), mais dispo en wrapper pip

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- CONFIGURATIONS DES OUTILS ---

[tool.bandit]
exclude_dirs = ["tests", "venv"]
skips = ["B101"] # Ignore 'assert' utilisé dans pytest souvent flaggé par erreur

[tool.mypy]
strict = false
ignore_missing_imports = true
python_version = "3.13"
files = ["src"]
exclude = ["tests", "venv", "build"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = [".git", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501", "B008", "C901"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers --cov=src --cov-report=term-missing"
